<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.eschoenawa.wifiar.activities.SettingsActivity$AreaPreferenceFragment"
        android:icon="@drawable/ic_format_shapes_black"
        android:title="@string/pref_header_area" />

    <header
        android:fragment="de.eschoenawa.wifiar.activities.SettingsActivity$HeatmapPreferenceFragment"
        android:icon="@drawable/ic_chart_black"
        android:title="@string/pref_header_heatmap" />

    <header
        android:fragment="de.eschoenawa.wifiar.activities.SettingsActivity$MeasurementPreferenceFragment"
        android:icon="@drawable/ic_network_check_black"
        android:title="@string/pref_header_measure" />

</preference-headers>
